force-app/main/default/objects/Approval_Process_Template_Action__c/Approval_Process_Template_Action__c.object-meta.xml
<CustomObject>
    <label>Approval Process Template Action</label>
    <nameField>
        <displayFormat>APTA-{0000}</displayFormat>
        <label>Approval Process Template Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Process Template Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>