force-app/main/default/objects/Approval_Process_Template_Action__c/fields/Approval_Process_Template__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Template__c</fullName>
    <label>Approval Process Template</label>
    <referenceTo>Approval_Process_Template__c</referenceTo>
    <relationshipLabel>Approval Process Template Actions</relationshipLabel>
    <relationshipName>Approval_Process_Template_Actions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>